<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".SplashActivity">

    <LinearLayout
        android:id="@+id/llcen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:src="@drawable/godo_logo" />

        <com.devspark.robototextview.widget.RobotoTextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/tasksimplified"
            android:textColor="#fff"
            android:textSize="24sp"
            app:robotoTypeface="roboto_thin" />

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/fast_str"
                android:textColor="#fff"


                app:robotoTypeface="roboto_light" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:text="@string/easy_str"
                android:textColor="#fff"
                app:robotoTypeface="roboto_light" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="end"
                android:text="@string/smart_str"
                android:textColor="#fff"
                app:robotoTypeface="roboto_light" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
