<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/godo_logo" />

    <TextView
        android:id="@+id/call"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/startnavigation"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/call_us_now_str"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tryagain"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#21282c"
        android:text="@string/try_again_str"
        android:textColor="#a3bee5"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/no_connection_str"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
